--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "object-assign": "4.1.1",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.4.2",
-    "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.4.2",
+    "react": "^16.8.6",
+    "react-avatar": "^3.6.0",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.5",
+    "react-dropzone-s3-uploader": "^1.1.0",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
+    "styled-components": "^4.2.1",
     "url-loader": "0.6.2"
   },
   "scripts": {
@@ -81,22 +85,22 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "css-loader": "0.28.7",
-    "eslint": "^5.14.1",
-    "eslint-config-react-app": "^3.0.7",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^3.0.8",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.12.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.12.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "react-dev-utils": "^5.0.1",
