--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "images3upload-react",
-  "homepage": "https://iaredave.github.io/images3upload-react/",
+  "homepage": "https://iaredave.github.io/images3upload-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
